--- a/testBenchGenerator/WaveformDesignerAndAnalyzer/View/AnalyzerView.xaml
+++ b/testBenchGenerator/WaveformDesignerAndAnalyzer/View/AnalyzerView.xaml
@@ -112,7 +112,9 @@
                 <TextBlock x:Name="dos" Grid.Row="2" Grid.Column="2" Text="Oversampling" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,5,0"/>                
                 <TextBlock x:Name="ddis" Grid.Row="3" Grid.Column="2" Text="Distance" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,5,0"/>
                 <TextBlock x:Name="dcp" Grid.Row="4" Grid.Column="2" Text="Cyclix prefix length" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,5,0"/>
-                
+                <TextBlock x:Name="drand" Grid.Row="5" Grid.Column="2" Text="Use random PM" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,50,0"/>
+                <TextBlock x:Name="dseed" Grid.Row="6" Grid.Column="2" Text="Init random seed" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,50,0"/>
+
                 <TextBlock x:Name="drad" Grid.Row="7" Grid.Column="2" Text="Radix" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,5,0"/>
                 <TextBlock x:Name="ddel" Grid.Row="8" Grid.Column="2" Text="Delimiter" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,5,0"/>
 
@@ -142,7 +144,9 @@
                 <TextBox x:Name="desOS" Grid.Row="2" Grid.Column="3" Text="{Binding OS}" VerticalAlignment="Center" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right" Margin="10,0" GotFocus="TextBox_GotFocus" PreviewMouseLeftButtonUp="TextBox_PreviewMouseLeftButtonUp"/>
                 <TextBox x:Name="desDistance" Grid.Row="3" Grid.Column="3" Text="{Binding Distance}" VerticalAlignment="Center" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right" Margin="10,0" GotFocus="TextBox_GotFocus" PreviewMouseLeftButtonUp="TextBox_PreviewMouseLeftButtonUp"/>
                 <TextBox x:Name="desCPLength" Grid.Row="4" Grid.Column="3" Text="{Binding CPLength}" VerticalAlignment="Center" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right" Margin="10,0" GotFocus="TextBox_GotFocus" PreviewMouseLeftButtonUp="TextBox_PreviewMouseLeftButtonUp"/>
-                
+                <CheckBox x:Name="desRand" Grid.Row="5" Grid.Column="3" IsChecked="{Binding IsRand}" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10,0"/>
+                <TextBox x:Name="desSeed" Grid.Row="6" Grid.Column="3" Text="{Binding Seed}" VerticalAlignment="Center" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right" Margin="10,0" GotFocus="TextBox_GotFocus" PreviewMouseLeftButtonUp="TextBox_PreviewMouseLeftButtonUp"/>
+
                 <ComboBox x:Name="desRadix" Grid.Row="7" Grid.Column="3" ItemsSource="{Binding Radixes}" VerticalAlignment="Center" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right" Margin="10,0" SelectionChanged="desRadix_SelectionChanged"/>
                 <ComboBox x:Name="desDel" Grid.Row="8" Grid.Column="3" ItemsSource="{Binding Delimiters}" VerticalAlignment="Center" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right" Margin="10,0" SelectionChanged="desDel_SelectionChanged"/>
 
@@ -256,7 +260,7 @@
 
                 <ComboBox x:Name="anType" Grid.Row="0" Grid.Column="1" HorizontalContentAlignment="Right" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="10,0" SelectionChanged="anType_SelectionChanged">
                     <ComboBoxItem Content="Sine"/>
-                    <ComboBoxItem Content="OFDM"/>
+                    <!--<ComboBoxItem Content="OFDM"/>-->
                 </ComboBox>
                 <TextBox x:Name="anFs" Grid.Row="1" Grid.Column="1" Text="{Binding Fs}" VerticalAlignment="Center" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right" Margin="10,0" GotFocus="TextBox_GotFocus" PreviewMouseLeftButtonUp="TextBox_PreviewMouseLeftButtonUp"/>
                 <TextBox x:Name="anBW" Grid.Row="2" Grid.Column="1" Text="{Binding Bitwidth}" VerticalAlignment="Center" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right" Margin="10,0" GotFocus="TextBox_GotFocus" PreviewMouseLeftButtonUp="TextBox_PreviewMouseLeftButtonUp"/>
