--- a/testBenchGenerator/App.xaml
+++ b/testBenchGenerator/App.xaml
@@ -2,7 +2,16 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:testBenchGenerator"
+             xmlns:oxy="http://oxyplot.org/wpf"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <Style TargetType="{x:Type Window}">
+            <Setter Property="FontFamily" Value="Resources/Fonts/#Dosis" />
+        </Style>
+        <Style TargetType="{x:Type oxy:Plot}">
+            <Setter Property="FontFamily" Value="Resources/Fonts/#Dosis" />
+            <Setter Property="TitleFont" Value="Resources/Fonts/#Dosis" />
+            <Setter Property="DefaultFont" Value="Resources/Fonts/#Dosis" />
+        </Style>
     </Application.Resources>
 </Application>
