--- a/testBenchGenerator/WaveformDesignerAndAnalyzer/View/AnalyzerView.xaml
+++ b/testBenchGenerator/WaveformDesignerAndAnalyzer/View/AnalyzerView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:testBenchGenerator.WaveformDesignerAndAnalyzer.View"
              xmlns:oxy="http://oxyplot.org/wpf"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Background="White">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -42,9 +42,9 @@
                 <Grid.RowDefinitions>
                     <RowDefinition/>
                     <RowDefinition/>
-                </Grid.RowDefinitions>                
+                </Grid.RowDefinitions>
 
-                <oxy:Plot x:Name="wfdI" Grid.Row="0" Grid.Column="0" Margin="10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TitleFontSize="12" Background="White" Title="I" BorderThickness="1">
+                <oxy:Plot x:Name="wfdI" Grid.Row="0" Grid.Column="0" Margin="10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TitleFontSize="12" TitleFont="#Dosis" DefaultFont="#Dosis" Background="White" Title="I" BorderThickness="1">
                     <oxy:Plot.Series>
                         <oxy:LineSeries ItemsSource="{Binding IPoints}"/>
                     </oxy:Plot.Series>
@@ -53,7 +53,7 @@
                         <oxy:LinearAxis Position="Left" LabelFormatter="ValueAxisLabelFormatter"/>
                     </oxy:Plot.Axes>
                 </oxy:Plot>
-                <oxy:Plot x:Name="wfdQ" Grid.Row="1" Grid.Column="0" Margin="10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TitleFontSize="12" Background="White" Title="Q" BorderThickness="1">
+                <oxy:Plot x:Name="wfdQ" Grid.Row="1" Grid.Column="0" Margin="10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TitleFontSize="12" TitleFont="#Dosis" DefaultFont="#Dosis" Background="White" Title="Q" BorderThickness="1">
                     <oxy:Plot.Series>
                         <oxy:LineSeries ItemsSource="{Binding QPoints}" Color="DarkRed"/>
                     </oxy:Plot.Series>
@@ -63,7 +63,7 @@
                     </oxy:Plot.Axes>
                 </oxy:Plot>
 
-                <oxy:Plot x:Name="wfdF" Grid.RowSpan="2" Grid.Column="1" Margin="10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TitleFontSize="12" Background="White" Title="Fourier plot" BorderThickness="1">
+                <oxy:Plot x:Name="wfdF" Grid.RowSpan="2" Grid.Column="1" Margin="10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TitleFontSize="12" TitleFont="#Dosis" DefaultFont="#Dosis" Background="White" Title="Fourier plot" BorderThickness="1">
                     <oxy:Plot.Series>
                         <oxy:LineSeries ItemsSource="{Binding FPoints}" Color="DarkBlue"/>
                     </oxy:Plot.Series>
@@ -181,7 +181,7 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <oxy:Plot x:Name="wfaI" Grid.Row="0" Grid.Column="0" Margin="10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TitleFontSize="12" Background="White" Title="I" BorderThickness="1">
+                <oxy:Plot x:Name="wfaI" Grid.Row="0" Grid.Column="0" Margin="10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TitleFontSize="12" TitleFont="#Dosis" DefaultFont="#Dosis" Background="White" Title="I" BorderThickness="1">
                     <oxy:Plot.Series>
                         <oxy:LineSeries ItemsSource="{Binding IPoints}"/>
                     </oxy:Plot.Series>
@@ -190,7 +190,7 @@
                         <oxy:LinearAxis Position="Left" LabelFormatter="ValueAxisLabelFormatter"/>
                     </oxy:Plot.Axes>
                 </oxy:Plot>
-                <oxy:Plot x:Name="wfaQ" Grid.Row="1" Grid.Column="0" Margin="10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TitleFontSize="12" Background="White" Title="Q" BorderThickness="1">
+                <oxy:Plot x:Name="wfaQ" Grid.Row="1" Grid.Column="0" Margin="10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TitleFontSize="12" TitleFont="#Dosis" DefaultFont="#Dosis" Background="White" Title="Q" BorderThickness="1">
                     <oxy:Plot.Series>
                         <oxy:LineSeries ItemsSource="{Binding QPoints}" Color="DarkRed"/>
                     </oxy:Plot.Series>
@@ -200,9 +200,9 @@
                     </oxy:Plot.Axes>
                 </oxy:Plot>
 
-                <oxy:Plot x:Name="wfaF" Grid.RowSpan="2" Grid.Column="1" Margin="10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TitleFontSize="12" Background="White" Title="Fourier plot" BorderThickness="1">
+                <oxy:Plot x:Name="wfaF" Grid.RowSpan="2" Grid.Column="1" Margin="10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TitleFontSize="12" TitleFont="#Dosis" DefaultFont="#Dosis" Background="White" Title="Fourier plot" BorderThickness="1">
                     <oxy:Plot.Series>
-                        <oxy:LineSeries ItemsSource="{Binding FPoints}" Color="DarkBlue"/>
+                        <oxy:LineSeries ItemsSource="{Binding FPoints}" Color="DarkBlue" FontFamily="../../Resources/Fonts/#Dosis"/>
                     </oxy:Plot.Series>
                     <oxy:Plot.Axes>
                         <oxy:LinearAxis Title="Frequency" Position="Bottom" Unit="Hz" LabelFormatter="ValueAxisLabelFormatterHz"/>
